# cloud-octo-infra

./: .gitignore  DEVOPS.md  README.md  SOURCE_CONTROL_WORKFLOW.md  main.tf  pyproject.toml  variables.tf  versions.tf
.github/workflows/: terraform.yml  terraform_security.yml
_shared/: shared.tf
build_spec/: tf_apply.yml  tf_plan_build_spec.yml  tf_sec.yml  tfsec.yml
features/: main.feature
modules/bastion/: main.tf
modules/code_build/: code_build.tf  iam.tf  loggin.tf  variables.tf
modules/code_commit/: code_commit.tf  variables.tf
modules/code_pipeline/: code_pipeline.tf  variables.tf
modules/docker_repo/: main.tf  outputs.tf
modules/dynamodb/: main.tf
modules/ecr/: main.tf  outputs.tf  variables.tf
modules/lambda/: main.tf
modules/load_balanced_cluster/: iam.tf  load_balancer.tf  locals.tf  main.tf  security_groups.tf  shared.tf  variables.tf
modules/logs/: main.tf  outputs.tf  variables.tf
modules/rds/: main.tf  output.tf  variables.tf
modules/secret/: main.tf
modules/state/: state.tf  variables.tf
modules/vpc/: main.tf  outputs.tf  variables.tf
templates/: apigateway.tpl
