[tool.poetry]
name = "cloud-octo-infra"
version = "0.1.0"
description = ""
authors = ["pazsaragi <pazsaragi40@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
checkov = "^2.0.632"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
